data/derived/sp14/progs/unify/prog4893.ml.out
Characters 229-244:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int list * 'a list list
       Type int is not compatible with type 'a list 
